# hash256-miner

./: .env.master.example  .env.solo-gpu.example  .env.worker.example  .gitignore  README.md  deploy-ubuntu.sh  env-loader.mjs  fleet-lite.sh  fleet.sh  hash256-gpu-worker.mjs  hash256-master.service  hash256-mine.mjs  hash256-solo-gpu.mjs  hash256-solo-gpu.service  hash256-worker.service  install-solo-gpu-service.sh  ips.txt.example  master-report.mjs  package-lock.json  package.json  perf-bench.mjs  solo-gpu-daemon.sh  start-miner.bat  start-solo-gpu.sh  start-worker.sh
gpu-miner/: CMakeLists.txt  README.md
gpu-miner/kernels/: keccak_miner.cl
gpu-miner/src/: main.cpp
native-worker/: Cargo.toml
native-worker/src/: main.rs
ubuntu-upload/: .env.worker.example  UPLOAD_README.md  cluster-mine.sh  deploy-ubuntu.sh  hash256-mine.mjs  master-report.mjs  package.json  start-master.sh  workers.txt.example
ubuntu-upload/native-worker/src/: main.rs
